--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "bcryptjs": "^2.4.3",
+    "chalk": "^2.4.2",
     "class-validator": "^0.9.1",
     "connect-redis": "^3.4.0",
     "cookie-parser": "^1.4.3",
@@ -23,6 +24,7 @@
     "pg": "^7.8.0",
     "reflect-metadata": "^0.1.13",
     "scrape-twitter": "^0.11.1",
+    "sentiment": "^5.0.1",
     "sentiment140": "^1.2.0",
     "type-graphql": "^0.16.0",
     "typeorm": "^0.2.12",
@@ -45,6 +47,6 @@
   },
   "scripts": {
     "start": "ts-node-dev --respawn src/index.ts",
-    "fetch-tweets": "ts-node-dev src/sentiment_modules/fetchTweets2.ts"
+    "fetch-tweets": "ts-node-dev src/sentiment_modules/fetchTweetsPromise.ts"
   }
 }
