--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
     "dateformat": "^3.0.3",
+    "emoji-tree": "^1.1.2",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "graphql": "^14.1.1",
+    "instagram-id-to-url-segment": "^0.0.0",
     "instagram-private-api": "^0.6.8",
     "ioredis": "^4.5.1",
     "jsonwebtoken": "^8.4.0",
