changed postgres to localhost

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,7 +1,7 @@
 {
   "name": "default",
   "type": "postgres",
-  "host": "instagauge.cmxxymh53lj2.us-east-1.rds.amazonaws.com",
+  "host": "localhost",
   "port": 5432,
   "username": "manx",
   "password": "jakeadelman",
