--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "emoji-tree": "^1.1.2",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "google-trends-api": "^4.9.0",
     "graphql": "^14.1.1",
     "instagram-id-to-url-segment": "^0.0.0",
     "instagram-private-api": "^0.6.8",
@@ -54,6 +55,8 @@
     "start": "ts-node-dev --respawn src/index.ts",
     "fetch-tweets": "ts-node-dev src/sentiment_modules/fetchTweetsPromise.ts",
     "fetch-instagram": "ts-node-dev src/sentiment_modules/instagram/fetchPosts.ts",
-    "fetch-twitter-user": "ts-node-dev src/sentiment_modules/userTweetFetch.ts TWITTER_USERNAME=ifelsemanx TWITTER_PASSWORD=jakeadelman"
+    "fetch-twitter-user": "ts-node-dev src/sentiment_modules/userTweetFetch.ts TWITTER_USERNAME=ifelsemanx TWITTER_PASSWORD=jakeadelman",
+    "hourly-aggregate": "ts-node-dev src/sentiment_modules/timestamps/hourlyAggregate.ts",
+    "fetch-google-trends": "ts-node-dev src/sentiment_modules/gTrends.ts"
   }
 }
