--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@now/node": "^0.5.0-canary.5",
+    "@now/node-server": "^0.4.26",
     "apollo-server-express": "^2.3.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -34,6 +36,7 @@
     "sentiment140": "^1.2.0",
     "type-graphql": "^0.16.0",
     "typeorm": "^0.2.12",
+    "typescript": "^3.2.4",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
