--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,11 +1,12 @@
 {
   "name": "default",
   "type": "postgres",
-  "host": "localhost",
-  "port": 5432,
-  "username": "manx",
-  "password": "jakeadelman",
-  "database": "instagauge",
+  "host": "tradrr-psql-do-user-3307088-0.db.ondigitalocean.com",
+  "port": 25060,
+  "username": "doadmin",
+  "password": "i3px3pqqw3h11uh1",
+  "database": "defaultdb",
+  "ssl": { "rejectUnauthorized": false },
   "synchronize": true,
   "logging": true,
   "entities": [
