--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@now/node": "^0.5.0-canary.5",
     "@now/node-server": "^0.4.26",
+    "add-subtract-date": "^1.0.14",
     "apollo-server-express": "^2.3.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
