--- a/now.json
+++ b/now.json
@@ -1,4 +1,4 @@
 {
   "version": 2,
-  "builds": [{ "src": "package.json", "use": "@now/node" }]
+  "builds": [{ "src": "index.js", "use": "@now/node" }]
 }
