--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "npx pm2 start ecosystem.config.js --no-daemon",
-    "test-start": "node ./dist/index.js",
+    "start": "NODE_ENV=production npx pm2 start ecosystem.config.js --no-daemon",
+    "test-start": "NODE_ENV=production node ./dist/index.js",
     "dev": "NODE_ENV=development ts-node-dev --respawn ./src/index.ts",
     "postinstall": "npx tsc",
     "test": "ts-node-dev src/sentiment_modules/bitmex/test.ts",
