add env flag to start

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "NODE_ENV=production npx pm2 start ecosystem.config.js",
-    "start-no-daemon": "NODE_ENV=production npx pm2 start ecosystem.config.js --no-daemon",
+    "start": "npx pm2 start ecosystem.config.js --env production",
+    "start-no-daemon": "npx pm2 start ecosystem.config.js --no-daemon --env production",
     "test-start": "node ./dist/index.js",
-    "dev": "NODE_ENV=development ts-node-dev --respawn ./src/index.ts",
-    "postinstall": "NODE_ENV=production npx tsc",
+    "dev": "ts-node-dev --respawn ./src/index.ts",
+    "postinstall": "npx tsc",
     "test": "ts-node-dev src/sentiment_modules/bitmex/test.ts",
     "populate-execution": "ts-node-dev src/sentiment_modules/bitmex/populateExecution.ts",
     "populate-trades": "ts-node-dev src/sentiment_modules/bitmex/trades/populateTrades.ts",
